--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
+    "react-simple-captcha": "^9.3.1",
+    "react-sweetalert2": "^0.6.0",
     "react-tabs": "^6.1.0",
+    "react-toastify": "^11.0.3",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
