--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@stripe/stripe-js": "^5.5.0",
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "firebase": "^11.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -24,7 +26,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
     "react-simple-captcha": "^9.3.1",
-    "react-sweetalert2": "^0.6.0",
+    "react-sweetalert2": "^0.5.2",
     "react-tabs": "^6.1.0",
     "react-toastify": "^11.0.3",
     "swiper": "^11.2.1"
