--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
     "react-simple-captcha": "^9.3.1",
-    "react-sweetalert2": "^0.5.2",
+    "react-sweetalert2": "^0.6.0",
     "react-tabs": "^6.1.0",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.0",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
